[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["savarmehrotra <savarmehrotra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.9.7"
sqlalchemy = "^1.4.25"
pymysql = "^1.1.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

